2004-04-02	blytkerchan
	* tests/macros_within_macros2.jh: new file

2004-03-25	blytkerchan	finish !include directive support
	* tests/include.jh: new file
	* preproc.c: include libgen
	[include_search_path]: new global variable
	(resolve_abs_filename): (re)write
	(resolve_rel_filename): ditto
	* preproc.h: be more verbose about contents
	add variables defined in preprocl.l and preprocp.y
	(resolve_abs_filename): constify return value
	(resolve_rel_filename): ditto
	* preprocl.l: move variable declarations not defined here to preproc.h
	(incl_state1): don't change state on >
	(incl_state2): rectify regex state
	don't change state on <
	return a token if not ignoring the block
	(preprocl_puts): return an integer
	(preprocl_putf): new function
	* preprocp.y: move declarations not defined here to preproc.h
	(abs_filename): constify filename
	call preprocl_putf
	(rel_filename): ditto (both)

2004-03-24	blytkerchan
	* preprocl.l: add default rule to return unmatched characters to the parser

	* preprocp.y: implement !else directive
	lay the groundworks for a better !include implementation
	* preprocl.l: ditto (both)
	* preproc.c: ditto
	* preproc.h: ditto
	* tests/else.jh: new file
	* tests/error_in_ignored.jh: ditto

2004-03-23	blytkerchan
	* preprocl.l: implement the !undef directive
	* preprocp.u: ditto
	* tests/undef.jh: new file

	* preproc.h: new file
	* preproc.c: ditto
	* preprocp.y: solve the macro redefinition problem
	solve the macros within macros problem
	* preprocl.l: ditto (both)
	fix empty macro definitions
	solve the conditional block problem for the !include directive
	* tests/conditional_block.jh: new file
	* tests/macro_redef.jh: ditto
	* tests/macros_within_macros.jh: ditto
	* ChangeLog: fix type-o
	* Makefile.am [jailpp_SOURCES]: add preproc.c
	[noinst_HEADERS]: new variable

	* preprocp.y: solve the conditional block problem

2004-03-22	blytkerchan
	* preprocl.l: define def_state2
	use def_state2 for macro definition contents