@@ -1,7 +1,7 @@
-SUBDIRS=libcontain
+SUBDIRS=libmemory libcontain
 bin_PROGRAMS=jailpp
 jailpp_SOURCES=preprocl.l preprocp.y preproc.c
-jailpp_LDADD=libcontain/libcontain.la
+jailpp_LDADD=libmemory/libmemory.la libcontain/libcontain.la
 noinst_HEADERS=preproc.h
 AM_YFLAGS=-d
 AM_CFLAGS=-g
