@@ -1,3 +1,8 @@
+2004-07-17	blytkerchan
+	* Makefile.am [SUBDIRS]: add libmemory
+	[jailpp_LDADD]: ditto
+	* preprocp.y: normalize use of hash API
+
 2004-04-02	blytkerchan
 	* tests/macros_within_macros2.jh: new file
 
